# fast_zero_sync

./: Dockerfile  compose.yml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 3619bc901a67_criando_a_tabela_todos.py  a26efcd7cd87_create_users_table.py  bf24f15a169d_table_users_add_column_updated_at.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
